syntax = "proto3";

package fare;

service FareService {
    rpc GetFare(GetFareRequest) returns (GetFareResponse);
    rpc ListFares(ListFaresRequest) returns (ListFaresResponse);
}

message GetFareRequest {
    string fareId = 1;
}

message ListFaresRequest {
    string routeId = 1;
    bool includeInactive = 2;
}

message GetFareResponse {
    string fareId = 1;
    string routeId = 2;
    double basePrice = 3;
    string currency = 4;
    bool isActive = 5;
}

message ListFaresResponse {
    repeated GetFareResponse fares = 1;
    int32 total = 2;
}
